fixed the quote card, updated design from the back end,  made it responsive, and aligned from high fidelity.

--- a/css/_get-quote.scss
+++ b/css/_get-quote.scss
@@ -28,6 +28,9 @@
         padding: 1rem;
         border-radius: 1rem 1rem 0 0;
 
+        h2 {
+          color: var(--margenta);
+        }
         p {
           margin-bottom: 1rem;
         }
@@ -36,6 +39,10 @@
           align-content: center;
           gap: 1rem;
           margin: 1rem 0;
+        }
+
+        img {
+          border-radius: 1rem;
         }
 
         svg {
@@ -48,8 +55,10 @@
           align-items: center;
         }
 
-        @media (min-width: $desktop) {
+        @media (min-width: $ipad) {
           border-radius: 1rem 0 0 1rem;
+          align-content: center;
+          padding: 0 2rem;
         }
       }
       .quote-form {
@@ -57,15 +66,16 @@
         border-radius: 0 0 1rem 1rem;
         padding: 1rem;
 
-        @media (min-width: $desktop) {
+        @media (min-width: $ipad) {
           border-radius: 0 1rem 1rem 0;
         }
       }
-      @media (min-width: $desktop) {
+      @media (min-width: $ipad) {
         @include container(1350px);
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         justify-content: center;
+        max-width: 1000px;
         margin: 10rem auto;
       }
     }
